--- a/over.html
+++ b/over.html
@@ -1,1 +1,23 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>overviw</title>
+    <style>
+    body{
+      background-color:skyblue;
+      background-image:url('nature1.webp'),url('nature.jpg');
+      background-size: 100px,50px;
+      background-repeat:no-repeat;
+      background-attachment: fixed;
+      background-position-x: left,right;
+      background-repeat: bottom,left;
+    }
+      
+    </style>
+  </head>
+  <body>
+    <p>lorem of 10 words</p>
+  </body>
+</html>
